# flask-restful-microservice-template

./: app.py  manage.py  pyproject.toml  swagger.docs
config/: __init__.py  dev_config.py
extensions/: __init__.py  router_extension.py
src/api_views/: __init__.py  api_view.py
src/logics/: __init__.py  logic.py
src/managers/: __init__.py  manager.py
src/models/: model.py
src/routers/: __init__.py
src/schemas/: schema.py
src/utils/: response.py
